JLisp/JLispParser.java
// Generated from JLisp.g4 by ANTLR 4.2

  import java.util.HashMap;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JLispParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__11=1, T__10=2, T__9=3, T__8=4, T__7=5, T__6=6, T__5=7, T__4=8, T__3=9, 
		T__2=10, T__1=11, T__0=12, SIMPLE_PUNC=13, A_OPERATOR=14, L_OPERATOR=15, 
		NIL=16, T=17, WSP=18, REAL=19, E=20, INT=21, LC=22, UC=23, DIGIT=24, LP=25, 
		RP=26, IF=27, MAX=28, EXPT=29, LOOP=30, BREAK=31, SETF=32, QUOTE=33, PRINT=34, 
		READ=35, PROGN=36, WS=37;
	public static final String[] tokenNames = {
		"<INVALID>", "'--h'", "'--i'", "'--execute'", "'--interprete'", "'--help'", 
		"'--compile'", "'.'", "'\"'", "'--e'", "'--gbytecode'", "'--c'", "'--g'", 
		"SIMPLE_PUNC", "A_OPERATOR", "L_OPERATOR", "NIL", "T", "WSP", "REAL", 
		"'E'", "INT", "LC", "UC", "DIGIT", "'('", "')'", "'if'", "MAX", "EXPT", 
		"LOOP", "BREAK", "SETF", "QUOTE", "PRINT", "READ", "PROGN", "WS"
	};
	public static final int
		RULE_program = 0, RULE_comands = 1, RULE_help = 2, RULE_compile = 3, RULE_interprete = 4, 
		RULE_execute = 5, RULE_genBytecode = 6, RULE_sexpr = 7, RULE_atom = 8, 
		RULE_num_atom = 9, RULE_decimal = 10, RULE_real = 11, RULE_racional = 12, 
		RULE_epart = 13, RULE_string = 14, RULE_symb_atom = 15, RULE_symbol = 16, 
		RULE_init_symbol = 17, RULE_special_symbol = 18, RULE_list = 19, RULE_list_body = 20, 
		RULE_break_expr = 21, RULE_aritm_expr = 22, RULE_logic_expr = 23, RULE_cond_expr = 24, 
		RULE_if_statement = 25, RULE_condition = 26, RULE_true_cond = 27, RULE_false_cond = 28, 
		RULE_loop_statement = 29, RULE_macro_expr = 30, RULE_macro_expt = 31, 
		RULE_macro_max = 32, RULE_macro_setf = 33, RULE_macro_quote = 34, RULE_macro_print = 35, 
		RULE_macro_read = 36, RULE_macro_progn = 37, RULE_alpha = 38;
	public static final String[] ruleNames = {
		"program", "comands", "help", "compile", "interprete", "execute", "genBytecode", 
		"sexpr", "atom", "num_atom", "decimal", "real", "racional", "epart", "string", 
		"symb_atom", "symbol", "init_symbol", "special_symbol", "list", "list_body", 
		"break_expr", "aritm_expr", "logic_expr", "cond_expr", "if_statement", 
		"condition", "true_cond", "false_cond", "loop_statement", "macro_expr", 
		"macro_expt", "macro_max", "macro_setf", "macro_quote", "macro_print", 
		"macro_read", "macro_progn", "alpha"
	};

	@Override
	public String getGrammarFileName() { return "JLisp.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  int numOps = 1; //numero de operaciones, comienza en 1 porque al menos se carga el argumento del main
	  HashMap<String,VarInfo> memory = new HashMap<String, VarInfo>(); //mapea el ID con el numero para la variable local
	  int localVarNum = 1; // cantidad de variables locales.
	  boolean comand=false;

	public JLispParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public SexprContext sexpr() {
			return getRuleContext(SexprContext.class,0);
		}
		public ComandsContext comands() {
			return getRuleContext(ComandsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(82);
			switch (_input.LA(1)) {
			case 8:
			case SIMPLE_PUNC:
			case A_OPERATOR:
			case L_OPERATOR:
			case NIL:
			case T:
			case REAL:
			case INT:
			case LC:
			case UC:
			case DIGIT:
			case LP:
				enterOuterAlt(_localctx, 1);
				{
				setState(78); sexpr();
				}
				break;
			case 1:
			case 2:
			case 3:
			case 4:
			case 5:
			case 6:
			case 9:
			case 10:
			case 11:
			case 12:
				enterOuterAlt(_localctx, 2);
				{
				setState(79); comands();
				comand=true;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandsContext extends ParserRuleContext {
		public CompileContext compile() {
			return getRuleContext(CompileContext.class,0);
		}
		public ExecuteContext execute() {
			return getRuleContext(ExecuteContext.class,0);
		}
		public InterpreteContext interprete() {
			return getRuleContext(InterpreteContext.class,0);
		}
		public GenBytecodeContext genBytecode() {
			return getRuleContext(GenBytecodeContext.class,0);
		}
		public HelpContext help() {
			return getRuleContext(HelpContext.class,0);
		}
		public ComandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterComands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitComands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitComands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComandsContext comands() throws RecognitionException {
		ComandsContext _localctx = new ComandsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_comands);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case 1:
			case 5:
				enterOuterAlt(_localctx, 1);
				{
				setState(84); help();
				}
				break;
			case 6:
			case 11:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); compile();
				}
				break;
			case 10:
			case 12:
				enterOuterAlt(_localctx, 3);
				{
				setState(86); genBytecode();
				}
				break;
			case 2:
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(87); interprete();
				}
				break;
			case 3:
			case 9:
				enterOuterAlt(_localctx, 5);
				{
				setState(88); execute();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HelpContext extends ParserRuleContext {
		public HelpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_help; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterHelp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitHelp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitHelp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HelpContext help() throws RecognitionException {
		HelpContext _localctx = new HelpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_help);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==1 || _la==5) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompileContext extends ParserRuleContext {
		public CompileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterCompile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitCompile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitCompile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompileContext compile() throws RecognitionException {
		CompileContext _localctx = new CompileContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_compile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==6 || _la==11) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterpreteContext extends ParserRuleContext {
		public InterpreteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interprete; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterInterprete(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitInterprete(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitInterprete(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterpreteContext interprete() throws RecognitionException {
		InterpreteContext _localctx = new InterpreteContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interprete);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==2 || _la==4) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExecuteContext extends ParserRuleContext {
		public ExecuteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_execute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterExecute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitExecute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitExecute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExecuteContext execute() throws RecognitionException {
		ExecuteContext _localctx = new ExecuteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_execute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==3 || _la==9) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenBytecodeContext extends ParserRuleContext {
		public GenBytecodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genBytecode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterGenBytecode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitGenBytecode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitGenBytecode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenBytecodeContext genBytecode() throws RecognitionException {
		GenBytecodeContext _localctx = new GenBytecodeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_genBytecode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_la = _input.LA(1);
			if ( !(_la==10 || _la==12) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SexprContext extends ParserRuleContext {
		public EnumType type=EnumType.INT;
		public AtomContext b;
		public ListContext a;
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public SexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterSexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitSexpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitSexpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SexprContext sexpr() throws RecognitionException {
		SexprContext _localctx = new SexprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sexpr);
		try {
			setState(107);
			switch (_input.LA(1)) {
			case 8:
			case SIMPLE_PUNC:
			case A_OPERATOR:
			case L_OPERATOR:
			case NIL:
			case T:
			case REAL:
			case INT:
			case LC:
			case UC:
			case DIGIT:
				enterOuterAlt(_localctx, 1);
				{
				setState(101); ((SexprContext)_localctx).b = atom();
				((SexprContext)_localctx).type = ((SexprContext)_localctx).b.type;
				}
				break;
			case LP:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); ((SexprContext)_localctx).a = list();
				((SexprContext)_localctx).type = ((SexprContext)_localctx).a.type;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public EnumType type=EnumType.INT;
		public Num_atomContext a;
		public Symb_atomContext b;
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Num_atomContext num_atom() {
			return getRuleContext(Num_atomContext.class,0);
		}
		public Symb_atomContext symb_atom() {
			return getRuleContext(Symb_atomContext.class,0);
		}
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterAtom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitAtom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitAtom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_atom);
		try {
			setState(118);
			switch (_input.LA(1)) {
			case REAL:
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(109); ((AtomContext)_localctx).a = num_atom();
				((AtomContext)_localctx).type = ((AtomContext)_localctx).a.type;
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 2);
				{
				setState(112); string();
				((AtomContext)_localctx).type = EnumType.STRING;
				}
				break;
			case SIMPLE_PUNC:
			case A_OPERATOR:
			case L_OPERATOR:
			case NIL:
			case T:
			case LC:
			case UC:
			case DIGIT:
				enterOuterAlt(_localctx, 3);
				{
				setState(115); ((AtomContext)_localctx).b = symb_atom();
				((AtomContext)_localctx).type = ((AtomContext)_localctx).b.type;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Num_atomContext extends ParserRuleContext {
		public EnumType type;
		public RacionalContext racional() {
			return getRuleContext(RacionalContext.class,0);
		}
		public DecimalContext decimal() {
			return getRuleContext(DecimalContext.class,0);
		}
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public Num_atomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_num_atom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterNum_atom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitNum_atom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitNum_atom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Num_atomContext num_atom() throws RecognitionException {
		Num_atomContext _localctx = new Num_atomContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_num_atom);
		try {
			setState(129);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120); decimal();
				((Num_atomContext)_localctx).type = EnumType.INT;
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123); real();
				((Num_atomContext)_localctx).type = EnumType.FRACTION;
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126); racional();
				((Num_atomContext)_localctx).type = EnumType.FLOAT;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DecimalContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JLispParser.INT, 0); }
		public DecimalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decimal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterDecimal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitDecimal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitDecimal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecimalContext decimal() throws RecognitionException {
		DecimalContext _localctx = new DecimalContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_decimal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131); match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RealContext extends ParserRuleContext {
		public TerminalNode REAL() { return getToken(JLispParser.REAL, 0); }
		public RealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RealContext real() throws RecognitionException {
		RealContext _localctx = new RealContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_real);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(REAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RacionalContext extends ParserRuleContext {
		public DecimalContext decimal(int i) {
			return getRuleContext(DecimalContext.class,i);
		}
		public EpartContext epart() {
			return getRuleContext(EpartContext.class,0);
		}
		public List<DecimalContext> decimal() {
			return getRuleContexts(DecimalContext.class);
		}
		public RacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_racional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).enterRacional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JLispListener ) ((JLispListener)listener).exitRacional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JLispVisitor ) return ((JLispVisitor<? extends T>)visitor).visitRacional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RacionalContext racional() throws RecognitionException {
		RacionalContext _localctx = new RacionalContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_racional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); decimal();
			setState(136); match(7);
			setState(137); decimal();
			setState(139);
			_la = _input.LA(1);
			if (_la==E) {
				{
				setState(138); epart();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
